# circ

./: .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  README.md  circ_cl.c  circ_sv.c
include/: channel.h  client.h  codes.h  common.h  config.h  connection.h  handlers.h  irc.h  irc_constants.h  list.h  log.h  motd.h  network.h  oper.h  parser.h  reactor.h  read_message.h  replies.h  response.h  server.h  socket.h  vector.h
src/: CMakeLists.txt  channel.c  channel.h  circ.c  circ.h  circ_cl.c  circ_sv.c  circlist.c  circlist.h  client.c  client.h  codes.h  common.h  config.c  config.h  connection.c  connection.h  context.h  ghashtable_test.c  handlers.c  handlers.h  hashtable.c  hashtable.h  intlist.h  irc.h  irc_constants.h  list.h  log.c  log.h  motd.c  msgtok.c  msgtok.h  network.h  oper.c  parser.c  parser.h  reactor.c  read_message.c  read_message.h  replies.c  (+5 more)
test/: CMakeLists.txt  test_handlers.c  test_hashtable.c  test_msgtok.c  test_parser.c  test_read_message.c
test/integration/: CMakeLists.txt
test/integration/tests/: client.py  conftest.py  test_away.py  test_join.py  test_ping.py  test_privmsg.py  test_register.py
test/unit/: CMakeLists.txt  hashtable_test.c  hashtable_test_runner.c  test_channel.c  test_handlers.c  test_hashtable.c  test_motd.c  test_msgtok.c  test_oper.c  test_parser.c  test_read_message.c  test_read_message1.c  test_vector.c
